# TuxedoMD

./: .env.example  README.md  package.json
scripts/: artifact-signing-tools.ps1  mas-pack.js  msstore-pack.js  post-release-assets.js  setup-windows-artifact-signing.ps1  tauri-build.js  verify-windows-authenticode.ps1  windows-artifact-sign.ps1
src/: App.svelte  styles.css
src-tauri/: Cargo.toml  tauri.windows.conf.json
src-tauri/src/: lib.rs
src/lib/: tauri.ts  types.ts
src/lib/editor/: MarkdownEditor.svelte
