[package]
name = "tuxedomd"
version = "0.1.0-alpha.1"
description = "A sleek, local-first Markdown editor"
authors = ["BurntToasters"]
edition = "2021"
license = "MPL-2.0"
repository = "https://github.com/BurntToasters/Tuxedo-MD"

[lib]
name = "tuxedomd_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
blake3 = { version = "1", features = ["pure"] }
tauri = { version = "2", features = ["macos-private-api"] }
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2"
thiserror = "2"
walkdir = "2"

[target.'cfg(any(target_os = "macos", target_os = "windows", target_os = "linux"))'.dependencies]
tauri-plugin-single-instance = "2"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61", features = ["Win32_Storage_FileSystem"] }

[features]
default = []
mas = []

[profile.release]
codegen-units = 16
lto = "thin"
